Analysis schema proposal WIP
