# api/config.py
@@ -152,7 +152,6 @@ expected_input_schemas = set([
     'acquisition.json',
     'acquisition-update.json',
     'analysis.json',
-    'analysis-job.json',
     'analysis-update.json',
     'avatars.json',
     'collection.json',
